# wtenv

./: .gitignore  .mise.toml  .worktree.yml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_SUPPLEMENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_AUDIT_SUMMARY.md  INSTALL.md  LICENSE  README.ja.md  README.md  REVIEW_QUICK_REFERENCE.md  REVIEW_SUMMARY.md  claude.md  install.sh
.cargo/: config.toml
.claude/: settings.json  settings.json.example
.claude/hooks/: README.md  session-init.sh  track-progress.py
.github/workflows/: ci.yml  release.yml
docs/: EXAMPLES.md  MANUAL_TESTING.md  ccmon-ui-state-diagram.md  testing-checklist.md
docs/examples/: advanced-config.md  basic-usage.md  ci-integration.md  monorepo.md
docs/plan/: implementation-plan.md
homebrew/: wtenv.rb
src/: commands.rs  commands_legacy.rs  config.rs  copy.rs  errors.rs  interactive.rs  main.rs  output.rs  worktree.rs  worktree_legacy.rs
src/commands/: analyze.rs  claude_task.rs  clean.rs  diff_env.rs  mod.rs  notify.rs  pr.rs  ps.rs  status.rs  ui.rs
src/worktree/: info.rs  mod.rs  process.rs
test-project/: .gitignore  package-lock.json  package.json
tests/: integration_test.rs
