[package]
name = "wtenv"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
description = "Git worktree environment manager"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
colored = "2.1"
anyhow = "1.0"
indicatif = "0.17"
dialoguer = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
