[package]
name = "wtenv"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
description = "Git worktree environment manager"
license = "MIT"
repository = "https://github.com/USERNAME/wtenv"
homepage = "https://github.com/USERNAME/wtenv"
documentation = "https://github.com/USERNAME/wtenv#readme"
keywords = ["git", "worktree", "cli", "environment", "development"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
glob = "0.3"
colored = "2.1"
anyhow = "1.0"
indicatif = "0.17"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
walkdir = "2.5"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
notify-rust = "4.11"
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
