[package]
name = "ccmon"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
description = "Claude Code Monitor - Real-time task progress for parallel development"
license = "MIT"
repository = "https://github.com/coxless/ccmon"
homepage = "https://github.com/coxless/ccmon"
documentation = "https://github.com/coxless/ccmon#readme"
keywords = ["claude", "claude-code", "cli", "monitor", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
authors = ["coxless.superconductor@gmail.com"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
